# starsim

./: .flake8  .gitignore  .nojekyll  .pylintrc  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.rst  LICENSE  README.md  README.rst  SECURITY.md  beliefs_final  code_of_conduct.md  code_of_conduct.rst  coinfection_prototype.py  conduct.html  context7.json  contributing.html  contributing.md  contributing.rst  index.html  llms.txt  midsq.c  mkdocs.yml  mkdocs_env.yml  pyproject.toml  removing_people.py  removing_people_demo.ipynb  robots.txt  search.json  setup.py  sitemap.xml  tutorials.html  user_guide.html  whatsnew.html
.github/: pull_request_template.md
.github/workflows/: cron_tests.yaml  github-repo-stats.yaml  linting.yml  publish_docs.yaml  publish_docs.yml  pypi_release.yaml  schedule_tests.yaml  schedule_tests.yml  test_coverage.yml  test_docs.yml  test_downstream.yaml  test_downstream.yml  test_models.yaml  test_spokes.yaml  tests.yaml  tests.yml
api/: analyzers.html  arrays.html  calibration.html  connectors.html  debugtools.html  demographics.html  disease.html  diseases.html  distributions.html  index.html  interventions.html  loop.html  modules.html  networks.html  parameters.html  people.html  products.html  results.html  run.html  samples.html  settings.html  sim.html  time.html  timeline.html  utils.html
concept/: __init__.py  analyzers.py  interventions.py  modules.py  people.py  results.py
data_ingestion/: NETWORK_BUILDER.py  TEST_new.ipynb  participants.csv  survey-answers.csv  test.py
docs/: .gitignore  CNAME  Makefile.quarto  README.md  _quarto.yml  _requirements.txt  _variables.yml  build_docs  build_docs.py  build_docs_quarto  build_docs_quarto_improved  build_quarto  check_notebooks  check_notebooks.py  clean_all  clean_outputs  clean_outputs.py  conduct.md  conduct.qmd  conf.py  contributing.md  contributing.qmd  customize_aliases.py  docutils.py  index.html  index.md  index.qmd  index.rst  jcache_execute_notebooks  normalize_notebooks  normalize_notebooks.py  overview.rst  pre_render.py  preview  publish  quarto_utils.py  quartodoc.yml  render  requirements.txt  run_tutorials  (+11 more)
docs/_static/: theme_overrides.css
docs/_templates/: custom-function-template.rst  footer.html  footer_start.html
docs/api/: arrays.md  arrays.qmd  calibration.md  calibration.qmd  demographics.md  demographics.qmd  disease.md  disease.qmd  distributions.md  distributions.qmd  index.md  index.qmd  index.rst  interventions.md  interventions.qmd  loop.md  loop.qmd  modules.md  modules.qmd  networks.md  networks.qmd  parameters.md  parameters.qmd  people.md  people.qmd  products.md  products.qmd  results.md  results.qmd  run.md  run.qmd  samples.md  samples.qmd  settings.md  settings.qmd  sim.md  sim.qmd  time.md  time.qmd  utils.md  (+1 more)
docs/assets/: styles-dark.scss  styles-light.scss  styles.css
docs/migration/: README.md  v3.0_v3.1.md
docs/migration_v2v3/: README.md  beta__script.py  beta__v3.py  boolstate__v3.py  custom_module__v3.py  example_custom_module__v2.py  example_sim__v3.py  mixingpool__v2.py  (+13 more)
examples/: SIR.py  compare_sir.py  demo.py  hiv_cd4analyzer.ipynb  hiv_testing.ipynb  samples-documentation.ipynb
migration/: v3.0_v3.1.html
simpleabm/: __init__.py  simpleabm.py
starsim/: .pylintrc  NETWORK_BUILDER.py  __init__.py  analyzers.py  arrays.py  calib_components.py  calibration.py  connectors.py  debug.py  debug_compare_versions.py  debugtools.py  demographics.py  disease.py  diseases.py  distributions.py  dists.py  epigamesnet.py  helpers.py  interventions.py  llm.py  loop.py  modules.py  network.py  networks.py  parameters.py  people.py  products.py  random.py  results.py  run.py  samples.py  sc_nested.py  seir.py  settings.py  sim.py  states.py  time.py  timeline.py  timepars.py  timeunits.py  (+2 more)
starsim_examples/: README.md  __init__.py
stisim/: __init__.py  analyzers.py  base.py  conditions.py  connectors.py  default_parameters.py  defaults.py  demographics.py  disease.py  distributions.py  gonorrhea.py  hiv.py  hpv.py  interventions.py  misc.py  modules.py  networks.py  parameters.py  pathogens.py  people.py  population.py  random.py  results.py  settings.py  sim.py  states.py  streams.py  utils.py  version.py
tests/: .coveragerc  baseline.json  baseline.yaml  baseline_multisim.json  benchmark.json  benchmark.yaml  benchmark_examples.py  benchmark_full.py  benchmark_simple.py  benchmark_tests.py  benchmark_tests.yaml  check_coverage  check_style  conftest.py  debug_v1v2.py  devtest_connectors.py  multisim_baseline.py  profile_quick.py  profile_sim.py  quick_baseline  quick_benchmark  removing_people.py  removing_people_demo.ipynb  requirements.txt  rng_experiment.ipynb  run_comparison.py  run_multistream.py  run_randomwalk.py  run_stable_monogamy.py  run_sweep.py  run_tests  scratchpad.py  simple.py  simple_benchmark.py  simtest.py  stable_monogamy.py  test_analyzers.py  test_api.py  test_arrays.py  test_base.py  (+51 more)
tutorials/: buildsim.html  demographics.html  dev_tut_pars.html  diseases.html  interventions.html  intro.html  solutions.html  t1_intro.html  t2_model.html  t3_demographics.html  t4_diseases.html  t5_networks.html  t6_interventions.html  transmission.html
user_guide/: advanced_distributions.html  advanced_indexing.html  advanced_nonstandard.html  advanced_parameters.html  advanced_profiling.html  advanced_random.html  advanced_time.html  basics_model.html  basics_parameters.html  basics_people.html  basics_sim.html  intro_models.html  intro_spokes.html  intro_starsim.html  modules_analyzers.html  modules_connectors.html  modules_demographics.html  modules_diseases.html  modules_interventions.html  modules_networks.html  workflows_calibration.html  workflows_cloud.html  workflows_deploy.html  workflows_run.html  workflows_samples.html  workflows_sir_calibration.html
vignettes/: hello_world_multiple.py  hello_world_single.py  interventions.py  v02_multi.py  v04_interventions_ck.py  v06_custom_disease.py  v06_custom_diseases.py  v07_connectors.py  v09_custom_networks.py  v10_custom_people.py  v11_births.py
(+346 files in other folders)
