[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "starsim"
dynamic = ["version"]
description = "A fast, flexible agent-based disease modeling framework"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["agent-based model", "simulation", "disease", "epidemiology"]

authors = [
  { name = "Starsim Development Team", email = "info@starsim.org" },
  { name = "Cliff Kerr" },
  { name = "Robyn Stuart" },
  { name = "Romesh Abeysuriya" },
  { name = "Paula Sanz-Leon" },
  { name = "Jamie Cohen" },
  { name = "Daniel Klein" }
]

classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "sciris>=3.2.4",
    "numba>=0.57.0",
    "scipy",
    "networkx",
    "matplotlib",
    "seaborn",
    "optuna"
]

[project.optional-dependencies]
fastmath = ["intel-cmplr-lib-rt"]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "pytest-env", 
    "pytest-xdist",
    "quartodoc",
    "jupyter",
    "jupyter-cache"
]

[project.urls]
"Website" = "https://starsim.org"
"Source" = "https://github.com/starsimhub/starsim/"

[tool.setuptools.packages.find]
where = ["."]
include = ["starsim*"]

[tool.setuptools.package-data]
starsim = ["*.ipynb", "*.rst", "*.csv"]

[tool.setuptools.dynamic]
version = {attr = "starsim.version.__version__"}
