[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "starsim"
dynamic = ["version"]
description = "A fast, flexible agent-based disease modeling framework"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["agent-based model", "simulation", "disease", "epidemiology"]

authors = [
  { name = "Starsim Development Team", email = "info@starsim.org" },
  { name = "Cliff Kerr" },
  { name = "Robyn Stuart" },
  { name = "Romesh Abeysuriya" },
  { name = "Paula Sanz-Leon" },
  { name = "Jamie Cohen" },
  { name = "Daniel Klein" }
]

classifiers = [
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Development Status :: 5 - Production/Stable",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "sciris>=3.2.4",
    "numba>=0.57.0",
    "scipy",
    "networkx",
    "matplotlib",
    "seaborn",
    "optuna"
]

[project.optional-dependencies]
fastmath = [
  "mkl",
  "intel-cmplr-lib-rt"
]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "pytest-env", 
    "pytest-xdist",
    "quartodoc",
    "jupyter",
    "jupyter-cache",
    "dask",
    "distributed"
]

optuna = ["scikit-learn"]

[project.urls]
"Website" = "https://starsim.org"
"Source" = "https://github.com/starsimhub/starsim/"

[tool.setuptools.packages.find]
where = ["."]
include = ["starsim*"]

[tool.setuptools.package-data]
starsim = ["*.ipynb", "*.rst", "*.csv"]

[tool.setuptools.dynamic]
version = {attr = "starsim.version.__version__"}
